--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,5 +34,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <!-- This Line For Connect App To Google map Services Across API Key -->
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyB5MZDCjsbRNinF3NztkmEs-wwSfmN_EU4"/>
     </application>
 </manifest>
