--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,11 @@ dependencies:
   google_fonts: ^2.3.1
   geolocator: ^7.7.0
   geocoding: ^2.0.1
-  awesome_dialog: ^2.2.0
 
+
+  awesome_dialog: ^2.2.0
+  pretty_dio_logger: ^1.1.1
+  http:
 
   #- For Google Maps [ Muhammad Al-Rifai ]:
   google_maps_flutter: ^2.1.5
