--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   google_fonts: ^2.3.1
   geolocator: ^7.7.0
   geocoding: ^2.0.1
-
+  google_geocoding: ^0.2.0
 
   awesome_dialog: ^2.2.0
   pretty_dio_logger: ^1.1.1
