Add The answer page

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -37,8 +37,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-<<<<<<< HEAD
-=======
+>>>>>>>>> HEAD
        <!-- This Line For Connect App To Google map Services Across API Key -->
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyB5MZDCjsbRNinF3NztkmEs-wwSfmN_EU4"/>
